--- a/src/global.css
+++ b/src/global.css
@@ -1,22 +1,16 @@
 body {
 	font-family: Roboto, sans-serif;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	margin: 0;
 	padding: 0;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 .wrapper {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 100%;
-	height: 100%;
+	flex: 1;
 	background-image: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
 }
